--- a/debian/control
+++ b/debian/control
@@ -22,7 +22,7 @@ Depends:
  ${misc:Depends},
  ${shlibs:Depends},
 Breaks: cgroup-bin (<< 0.40~rc1-3~)
-Replaces: cgroup-bin
+Replaces: cgroup-bin (<< 0.40~rc1-3~)
 Description: control and monitor control groups (tools)
  Control Groups (cgroups) provide a mechanism for aggregating/partitioning sets
  of tasks, and all their future children, into hierarchical groups with
