--- a/debian/rules
+++ b/debian/rules
@@ -3,7 +3,7 @@
 DEB_HOST_MULTIARCH ?= $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
 
 %:
-	dh ${@} --parallel --with autoreconf,autotools_dev
+	dh ${@} --parallel --with autoreconf
 
 override_dh_auto_configure:
 	dh_auto_configure -- --libdir /lib/$(DEB_HOST_MULTIARCH) --enable-opaque-hierarchy="name=systemd"
