--- a/debian/rules
+++ b/debian/rules
@@ -6,7 +6,7 @@ DEB_HOST_MULTIARCH ?= $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
 	dh ${@} --parallel --with autoreconf
 
 override_dh_auto_configure:
-	dh_auto_configure -- --libdir /lib/$(DEB_HOST_MULTIARCH) --enable-opaque-hierarchy="name=systemd"
+	dh_auto_configure -- --libdir /lib/$(DEB_HOST_MULTIARCH) --disable-silent-rules --enable-opaque-hierarchy="name=systemd"
 
 override_dh_auto_install:
 	dh_auto_install
