--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: libcgroup
 Priority: optional
 Section: libs
-Maintainer: Christian Kastner <debian@kvr.at>
+Maintainer: Christian Kastner <ckk@debian.org>
 Build-Depends:
  debhelper (>= 9),
  dh-autoreconf,
