d/control: Re-indent

--- a/debian/control
+++ b/debian/control
@@ -3,11 +3,11 @@ Priority: optional
 Section: libs
 Maintainer: Christian Kastner <ckk@debian.org>
 Build-Depends:
- debhelper (>= 9),
- dh-autoreconf,
- bison,
- flex,
- libpam-dev,
+    debhelper (>= 9),
+    dh-autoreconf,
+    bison,
+    flex,
+    libpam-dev,
 Standards-Version: 3.9.6
 Homepage: http://libcg.sourceforge.net/
 Vcs-Browser: http://anonscm.debian.org/gitweb/?p=collab-maint/libcgroup.git
@@ -18,8 +18,8 @@ Section: admin
 Architecture: linux-any
 Multi-Arch: foreign
 Depends:
- ${misc:Depends},
- ${shlibs:Depends},
+    ${misc:Depends},
+    ${shlibs:Depends},
 Breaks: cgroup-bin (<< 0.40~rc1-3~)
 Replaces: cgroup-bin (<< 0.40~rc1-3~)
 Description: control and monitor control groups (tools)
@@ -35,11 +35,10 @@ Description: control and monitor control groups (tools)
 Package: libcgroup1
 Architecture: linux-any
 Multi-Arch: same
-Pre-Depends:
- ${misc:Pre-Depends}
+Pre-Depends: ${misc:Pre-Depends}
 Depends:
- ${misc:Depends},
- ${shlibs:Depends},
+    ${misc:Depends},
+    ${shlibs:Depends},
 Description: control and monitor control groups (library)
  Control Groups (cgroups) provide a mechanism for aggregating/partitioning sets
  of tasks, and all their future children, into hierarchical groups with
@@ -56,11 +55,11 @@ Priority: extra
 Architecture: linux-any
 Multi-Arch: same
 Depends:
- ${misc:Depends},
- cgroup-tools (= ${binary:Version}),
- libcgroup1 (= ${binary:Version}),
- libcgroup-dev (= ${binary:Version}),
- libpam-cgroup (= ${binary:Version}),
+    ${misc:Depends},
+    cgroup-tools (= ${binary:Version}),
+    libcgroup1 (= ${binary:Version}),
+    libcgroup-dev (= ${binary:Version}),
+    libpam-cgroup (= ${binary:Version}),
 Description: control and monitor control groups (debug)
  Control Groups (cgroups) provide a mechanism for aggregating/partitioning sets
  of tasks, and all their future children, into hierarchical groups with
@@ -76,8 +75,8 @@ Section: libdevel
 Architecture: linux-any
 Multi-Arch: same
 Depends:
- ${misc:Depends},
- libcgroup1 (= ${binary:Version}),
+    ${misc:Depends},
+    libcgroup1 (= ${binary:Version}),
 Description: control and monitor control groups (development)
  Control Groups (cgroups) provide a mechanism for aggregating/partitioning sets
  of tasks, and all their future children, into hierarchical groups with
@@ -93,8 +92,8 @@ Section: admin
 Architecture: linux-any
 Multi-Arch: same
 Depends:
- ${misc:Depends},
- ${shlibs:Depends},
+    ${misc:Depends},
+    ${shlibs:Depends},
 Description: control and monitor control groups (PAM)
  Control Groups (cgroups) provide a mechanism for aggregating/partitioning sets
  of tasks, and all their future children, into hierarchical groups with
@@ -112,8 +111,8 @@ Section: oldlibs
 Priority: extra
 Architecture: all
 Depends:
- ${misc:Depends},
- cgroup-tools,
+    ${misc:Depends},
+    cgroup-tools,
 Description: control and monitor control groups (transitional package)
  Package to ease upgrading from older cgroup-bin packages to the new
  cgroup-tools package.
