--- a/debian/control
+++ b/debian/control
@@ -10,8 +10,8 @@ Build-Depends:
     libpam-dev,
 Standards-Version: 3.9.6
 Homepage: http://libcg.sourceforge.net/
-Vcs-Browser: http://anonscm.debian.org/gitweb/?p=collab-maint/libcgroup.git
 Vcs-Git: git://anonscm.debian.org/collab-maint/libcgroup.git
+Vcs-Browser: http://anonscm.debian.org/cgit/collab-maint/libcgroup.git
 
 Package: cgroup-tools
 Section: admin
