--- a/debian/rules
+++ b/debian/rules
@@ -6,6 +6,7 @@
 
 export DEB_BUILD_MAINT_OPTIONS = hardening=+all
 
+DEBVER := $(shell dpkg-parsechangelog -S Version)
 DEB_HOST_MULTIARCH ?= $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
 
 
@@ -63,7 +64,7 @@ override_dh_compress:
 
 
 override_dh_strip:
-	dh_strip --dbg-package=libcgroup-dbg
+	dh_strip --dbgsym-migration='libcgroup-dbg (<< $(DEBVER)~)'
 
 
 override_dh_makeshlibs:
