--- a/debian/control
+++ b/debian/control
@@ -99,12 +99,10 @@ Description: control and monitor control groups (transitional package)
  This package can be purged at anytime once the cgroup-bin package has been
  installed.
 
-Package: cgroupe-services
+Package: cgroup-services
 Section: admin
 Priority: optional
 Architecture: all
 Depends:
-    ${misc:Depends},
-    ${shlibs:Depends},
 	cgroup-tools,
 Description: systemd service files to load cgrules.conf and cgconfig.conf
